Add STEAM_CLIENT_ARGS to LauncherConstants